--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="presente">Presente</string>
     <string name="ausente">Ausente</string>
     <string name="salvar">Salvar</string>
+    <string name="nome_obrigatorio">Nome é obrigatório.</string>
 </resources>
