Dashboard com contagem

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="deseja_remover_o_convidado">Deseja remover o convidado?</string>
     <string name="resposta_sim">Sim</string>
     <string name="resposta_nao">Não</string>
+    <string name="total">Total</string>
 </resources>
