--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="resposta_sim">Sim</string>
     <string name="resposta_nao">Não</string>
     <string name="total">Total</string>
+    <string name="convidado_removido_com_sucesso">Convidado removido com sucesso.</string>
 </resources>
