--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="resposta_nao">Não</string>
     <string name="total">Total</string>
     <string name="convidado_removido_com_sucesso">Convidado removido com sucesso.</string>
+    <string name="documento">Documento</string>
 </resources>
