--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="total">Total</string>
     <string name="convidado_removido_com_sucesso">Convidado removido com sucesso.</string>
     <string name="documento">Documento</string>
+    <string name="gerenciamento_de_convidados">Gerenciamento de Convidados</string>
 </resources>
